# outfit-inspiration

./: .gitignore  README.md  data.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  mypy.yml
data/: README.md  data.py  data_exceptions.py
data_processor/: processor.py
model_interface/: README.md  config.py  reverse_garment_names.py
model_interface/clothes_detection/: config.py  items_dataset.py  upload_new_batch_pictures.py  usage_example.ipynb  yolo_interface.py
model_interface/clothes_detection/train/: YOLOv5.ipynb  clothes.yaml  download_pictures.py
model_interface/image_similarity/: README.md  SimilarityModel.py  SimilarityModelInterface.py  config.py  resize_images.py
model_interface/image_similarity/sandbox/: images_for_classification_category_filename_dataframe.csv  parse_categories_of_images.ipynb  parse_categories_of_images_new_dataset.ipynb  parse_categories_of_images_old_dataset.ipynb
model_interface/nearest_neighbors/: AnnoyInterface.py
orchestrator/: detection_model_flow.ipynb  embeddings_for_segments_flow.py  init_server_flow.py  main_user_flow.py  new_images_for_embeddings_flow.py  similarity_model_flow.py  upload_new_images_to_database_flow.py
web/: index.html  server.py  styles.css
web/static/: styles.css
web/templates/: find.html
