[tool.mypy]
explicit_package_bases = true
disable_error_code = "type-abstract"
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_redefinition = true
ignore_missing_imports = true

[tool.poetry]
name = "outfit-inspiration"
version = "0.0.0"
description = "Outfit inspiration from your wardrobe"
authors = ["Evgeniia Vu <5656tetetre@gmail.com>",
"Alexandra Sorokovikova <alexandraroze2000@gmail.com>"]
readme = "README.md"
repository = "https://github.com/AleksandraSorokovikova/outfit-inspiration"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
boto3 = "1.28.70"
botocore = "1.31.70"
click = "8.1.7"
jmespath = "1.0.1"
numpy = "1.26.1"
pandas = "2.1.1"
py-setenv = "1.1.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
s3transfer = "0.7.0"
six = "1.16.0"
tzdata = "2023.3"
urllib3 = "2.0.7"
tqdm = "^4.66.1"
pillow = "^10.1.0"
datasets = "^2.14.6"
keras = "^2.14.0"
scikit-learn = "^1.3.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
annoy = "^1.17.3"
keras2onnx = "^1.7.0"
tf2onnx = "^1.15.1"
onnx = "1.14.1"
onnxruntime = "^1.16.3"

[tool.poetry.group.dev.dependencies]  # development process dependencies
black = "^22.12"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
